# evolving-city-generation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.md
doc/: style_guide.md
doc/city_generation_algorithm/: city_generation_algorithm.md
doc/roof_generation_algorithm/: roof_generation_algorithm.md
flatbuffers/: gamemap.fbs  tile.fbs  tileset.fbs
media/: README.txt
scripts/: flatbuffers_compile_schemas.ps1
shaders/: discard_utilities.frag  entity_ids.frag  entity_ids.vert  main_shader.frag  main_shader.fshader  main_shader.vert  main_shader.vshader  visible_buffer_builder.frag
shaders/framebuffer_viewer/: default.frag  default.fshader  default.vert
shaders/framebuffer_viewer/custom/: edgeable_ids.frag  entity_ids.frag  entity_ids.fshader
shaders/postprocessing/: default.vert  edge_detector.frag  edge_detector.fshader  edge_texture_mixer.frag  edge_texture_mixer.fshader  erosion.frag  erosion.fshader  overdraw.frag
shaders/visual_debug/: visual_debug.frag  visual_debug.fshader  visual_debug.vert  visual_debug.vshader
src/: game.cpp  game.hh  main.cc  main.cpp  utilities.cpp  utilities.hh
src/audio/: audio_manager.cpp  audio_manager.hh
src/characters/: mobile.cpp  mobile.h
src/data_strctures/: data_array.hh  slot_manager.cpp  slot_manager.hh
src/debug/: asserts.hh
src/debug/framebuffer_viewer/: framebuffer_viewer.cpp  framebuffer_viewer.hh
src/debug/imgui/: base_gui.cpp  base_gui.hh  imgui_panels.cpp  imgui_panels.hh  main_loop_analyzer_gui.cpp  main_loop_analyzer_gui.hh  main_menu_gui.cpp  main_menu_gui.hh  movement_gui.cpp  movement_gui.hh  tutorial_panel.cpp  tutorial_panel.hh
src/debug/logger/: debug_printers.h  debug_printers.hh  log_buffer.cpp  log_buffer.hh  log_streams.cpp  log_streams.hh  logger.h  logger.hh  streams.h
src/debug/speed_tester/: speed_tester.cpp  speed_tester.hh
src/debug/test_logger/: streams.h  test_logger.h
src/debug/visual/: building_expansion_stream.hh  hip_roof_matrix_stream.hh  player_movement_stream.hh
src/debug/visual/base/: debug_vertices.cpp  debug_vertices.hh  polygon_highlighting.hh  rect_highlighting.hh  tiles_highlighting.h  visual_debug.cpp  visual_debug.hh  visual_debug_graphics_manager.cpp  visual_debug_graphics_manager.hh  visual_debug_highlighting.cpp  visual_debug_highlighting.hh  visual_debug_utilities.hh
src/debug/visual/building_expansion/: building_expansion_visual_debug.cpp  building_expansion_visual_debug.hh
src/debug/visual/hip_roof_matrix/: hip_roof_matrix_visual_debug.cpp  (+1 more)
src/game_state/: data_reader.cpp  data_reader.hh  data_writer.cpp  data_writer.hh
src/graphics/: camera.cpp  camera.hh  color.cpp  color.hh  dynamic_manager.cpp  dynamic_manager.hh  dynamic_subimage.hh  dynamic_vertices.cpp  dynamic_vertices.hh  free_polygon.cpp  free_polygon.hh  free_triangle.cpp  free_triangle.hh  free_triangle_vertices.cpp  free_triangle_vertices.hh  free_vertex.cpp  free_vertex.hh  gimp_square.cpp  gimp_square.hh  graphics_manager.cpp  graphics_manager.hh  graphics_manager_core.cpp  graphics_manager_core.hh  graphics_tests.cpp  graphics_tests.hh  graphics_utilities.cpp  graphics_utilities.hh  mobile_subimage_set.cpp  mobile_subimage_set.hh  roof_graphics.hh  roof_vertices.hh  shader.cpp  shader.hh  texture_subimage.hh  tile_vertices.cpp  tile_vertices.hh  world_parallelepiped.cpp  world_parallelepiped.hh  world_rect.hh
src/graphics/data_structures/: tileset_vertex_data.cpp  tileset_vertex_data.hh
src/graphics/opengl/: draw_arrays_indirect_command.hh
src/graphics/preparation/: roof_graphics_manager.cpp  roof_graphics_manager.hh  tile_graphics_manager.cpp  tile_graphics_manager.hh
src/graphics/textures/: texture_2d.cpp  texture_2d.hh  texture_2d_array.cpp  texture_2d_array.hh
src/imgui_impl_custom/: imgui_impl_glfw.h  imgui_impl_glfw_customized.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_customized.cpp  imgui_wrapper.h
src/input/: camera_controller.cpp  camera_controller.hh  main_window_input.cpp  main_window_input.hh  main_window_objects.hh  sim_input.hh  sim_input_manager.hh
src/io/flatbuffers/: gamemap_generated.h  tile_generated.h  tileset_generated.h
src/io/std/: vector_io.hh
src/map/: city.cpp  city.hh  city_block.hh  direction.cc  direction.h  door_manager.cpp  door_manager.hh  gamemap.cc  gamemap.h  map_forward_decl.hh  map_graph.h
src/map/buildings/: area_expansion_template.hh  area_template.cpp  area_template.hh  block_outline.cpp  block_outline.hh  building.cpp  building.hh  building_area.hh  building_manager.cpp  building_manager.hh  building_recipe.hh  prefab_building.hh  roof.hh  roof_algorithm.cpp  roof_algorithm.hh
src/map/tiles/: border_type.cpp  border_type.hh  tile.cpp  tile.hh  tile_set.cpp  tile_set.hh
src/mediators/: roof_graphics_mediator.hh  tile_graphics_mediator.cpp  tile_graphics_mediator.hh
src/mediators/queues/: base_event.hh  door_ev.hh  event_queues_impl.hh  gui_ev.hh  mobile_ev.hh  player_ev.hh  tutorial_ev.hh
src/objects/: door.hh
src/settings/: game_state_settings.hh  gameplay_settings.hh  graphics_settings.cpp  graphics_settings.hh
src/settings/debug/: buildingexpansion_visualdebug.hh  debug_settings.hh  hiproofmatrix_visualdebug_settings.hh  playermovement_visualdebug.hh  visual_debug_player_movement_settings.hh
src/settings/simulation/: map_settings.hh  simulation_settings.hh
src/std_extensions/: hash_functions.hh
src/system/: clock.hh  parallelepiped.cpp  parallelepiped.hh  rect.cc  rect.hh  vector2.hh  vector3.hh
src/systems/: mobile_manager.cpp  mobile_manager.h  player_manager.cpp  player_manager.h  player_manager.hh  trail_system.cpp  trail_system.hh
src/systems/tutorial/: demo_tutorial.cpp  demo_tutorial.hh  tutorial.cpp  tutorial.hh
src/ui/: on_screen_messages.cpp  on_screen_messages.hh
src/utilities/: asserts.hh  filesystem_utilities.hh  main_loop_data.hh  time_utilities.cpp  time_utilities.hh  timed_counter.hh
src/window/: game_video_mode.cpp  game_video_mode.hh  glfw_wrapper.cpp  glfw_wrapper.hh  imgui_config.h  imgui_wrapper.h  window_manager.cpp  window_manager.hh
(+12 files in other folders)
